# ifm-cr1140

./: .gitignore  CLA-CORPORATE.md  CLA.md  CLAUDE.md  CONTEXT-MAP.md  Cargo.toml  LICENSING.md  README.md  cr1140-cap-recon.sh  cr1140-eeprom-verify.sh  cr1140-recon.sh  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.scratch/baler-demo/: PRD.md  README.md
.scratch/baler-demo/issues/: 01-crate-skeleton-shell.md  02-screen-router.md  03-can-command-seam.md  04-bale-counter-retain.md  05-counter-stats-row.md  06-resets.md  07-knives-screen.md  08-wrapping-screen.md  09-context-docs.md
.scratch/retain-store/: PRD.md
.scratch/retain-store/issues/: 01-hal-nvmem-primitive.md  02-hal-factory-eeprom-accessors.md  03-sdk-retain-store.md  04-sdk-net-apply.md  05-deploy-mask-ifm-retain-srv.md
cr1140-baler-demo/: CONTEXT.md  Cargo.toml
cr1140-baler-demo/src/: can.rs  counter.rs  knives.rs  main.rs  router.rs  settings.rs  wrapping.rs
cr1140-baler-demo/ui/: app.slint
cr1140-hal/: CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md
cr1140-hal/examples/: blink-led.rs  can-echo.rs  demo.rs  hello-fb.rs  hello.rs  read-buttons.rs
cr1140-hal/src/: error.rs  lib.rs  prelude.rs
cr1140-hal/src/can/: mod.rs
cr1140-hal/src/display/: fbdev.rs  mod.rs  surface.rs
cr1140-hal/src/input/: event.rs  mod.rs  reader.rs
cr1140-hal/src/sys/: mod.rs  parse.rs
cr1140-sdk/: CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md
cr1140-sdk/src/: config.rs  device.rs  error.rs  guard.rs  led.rs  lib.rs  metrics.rs  net.rs  retain.rs
cr1140-slint/: CONTEXT.md  Cargo.toml
cr1140-slint-demo/: CONTEXT.md  Cargo.toml  README.md  build.rs
cr1140-slint-demo/src/: led.rs  main.rs  metrics.rs  platform.rs
cr1140-slint-demo/ui/: app.slint
cr1140-slint/src/: lib.rs  pixel.rs  platform.rs
deploy/: cr1140-app.service  install.sh  restore-codesys.sh
docs/: device-facts.md  recon.txt  slint-spike.md
docs/adr/: 0001-codesys-fb-capability-scope.md  0002-retain-store-on-spi-eeprom.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-05-29-cr1140-rust-hal.md  2026-05-29-cr1140-sdk-improvements.md
docs/superpowers/specs/: 2026-05-29-cr1140-hal-dx-gaps-design.md  2026-05-29-cr1140-rust-hal-design.md  2026-05-29-cr1140-sdk-improvements-design.md
scripts/: cr1140-eeprom-dump.sh
