[workspace]
resolver = "2"
members = ["cr1140-hal", "cr1140-sdk", "cr1140-slint", "cr1140-slint-demo", "cr1140-baler-demo"]

[workspace.package]
edition      = "2021"
license      = "GPL-3.0-only"
authors      = ["Patrick Dahlke (patdhlk) <me@patrickdahlke.com>"]
repository   = "https://github.com/UpTux/ifm-cr1140"
rust-version = "1.82"
