[package]
name = "cr1140-baler-demo"
version = "0.1.0"
publish = false
# GPLv3: this binary links Slint (via cr1140-slint), used under its GPLv3 option.
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
cr1140-hal = { path = "../cr1140-hal" }     # raw hardware (fb, keypad, CAN, nvmem)
cr1140-sdk = { path = "../cr1140-sdk" }     # ShutdownGuard, retain::Store
cr1140-slint = { path = "../cr1140-slint" } # Slint TargetPixel + Platform glue
# Slint with NO system backend and NO std-on-Linux font loading — the MCU feature
# set keeps it pure-Rust so the static-musl cross-build works. See the matching
# note in cr1140-slint-demo/Cargo.toml.
slint = { version = "1.12", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }
tracing = "0.1"
tracing-subscriber = "0.3"                  # the demo is standalone, so it owns the subscriber
serde = { version = "1", features = ["derive"] }

[build-dependencies]
slint-build = "1.12"
