[package]
name = "cr1140-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Dahlke (patdhlk) <me@patrickdahlke.com>"]
publish = false
description = "App-building conveniences on top of cr1140-hal: LED effects, system telemetry, device/network info. UI-framework agnostic."
# Dual-licensed: GPLv3 for open-source use, or a commercial license — see LICENSING.md.
license = "GPL-3.0-only"

[dependencies]
cr1140-hal = { path = "../cr1140-hal" }
nix = { version = "0.29", features = ["net"] } # getifaddrs for interface IPs
tracing = "0.1"                                # facade only; no subscriber in the lib
thiserror = "2"                                # matches cr1140-hal's major
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.9", optional = true }
signal-hook = { version = "0.3", optional = true }

[features]
default = ["config", "signals"]
config = ["dep:serde", "dep:toml"]
signals = ["dep:signal-hook"]
