[package]
name = "cr1140-sdk"
version = "0.1.0"
description = "App-building conveniences on top of cr1140-hal: LED effects, system telemetry, device/network info. UI-framework agnostic."
edition.workspace      = true
# Dual-licensed: GPLv3 for open-source use, or a commercial license — see LICENSING.md.
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
readme        = "README.md"
documentation = "https://docs.rs/cr1140-sdk"
keywords      = ["cr1140", "ifm", "embedded", "telemetry", "linux"]
categories    = ["embedded", "os::linux-apis"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
cr1140-hal = { path = "../cr1140-hal", version = "0.1" }
nix = { version = "0.29", features = ["net"] } # getifaddrs for interface IPs
tracing = "0.1"                                # facade only; no subscriber in the lib
thiserror = "2"                                # matches cr1140-hal's major
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.9", optional = true }
postcard = { version = "1", features = ["use-std"], optional = true } # compact binary serde for retain
signal-hook = { version = "0.3", optional = true }

[features]
default = ["config", "signals", "retain"]
config = ["dep:serde", "dep:toml"]
# Reflash-surviving persistence on the SPI EEPROM (A/B + CRC32, postcard).
retain = ["dep:serde", "dep:postcard"]
# Host network-config apply via `nmcli` (NetworkManager). Off by default: keeps
# host assumptions out of the guest-minimal build (ADR-0002, "SDK is a guest").
net = ["dep:serde"]
signals = ["dep:signal-hook"]
