[package]
name = "cr1140-slint-demo"
version = "0.1.0"
edition = "2021"
publish = false
# GPLv3: this binary links Slint (via cr1140-slint), used under its GPLv3 option.
license = "GPL-3.0-only"

[dependencies]
cr1140-hal = { path = "../cr1140-hal" }     # raw hardware
cr1140-sdk = { path = "../cr1140-sdk" }     # led effects, telemetry, device info
cr1140-slint = { path = "../cr1140-slint" } # Slint TargetPixel + Platform glue
# Slint with NO system backend and NO std-on-Linux font loading. Using the MCU
# feature set (the same one bare-metal targets use) keeps Slint pure-Rust:
#   - dropping `std` avoids fontconfig/fontdb system-font loading (the C dep that
#     breaks the static-musl cross-build);
#   - `unsafe-single-threaded` suits our single-thread super-loop;
#   - `libm` supplies float math without std.
# Our own binary still links std (for the HAL, std::fs, threads); only Slint is
# built no-std-style. Fonts are embedded at build time instead (see build.rs).
slint = { version = "1.12", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

[build-dependencies]
slint-build = "1.12"
