[package]
name = "cr1140-slint"
version = "0.1.0"
publish = false
description = "Slint integration for the CR1140: a framebuffer-compatible TargetPixel and a minimal software-rendering Platform."
edition.workspace      = true
# GPLv3: this crate links Slint, used here under its GNU GPLv3 option. See LICENSE.
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
# Same no-std-on-Linux feature set as consumers, so feature unification keeps the
# build fontconfig-free and static-musl friendly. See docs/slint-spike.md.
slint = { version = "1.12", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }
